<resources>
    <string name="app_name">ProgressiveCommunications</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="rem_me">Remember Me</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="set_new_password">Set New Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="dashboard">Dashboard</string>
    <string name="onsite">Onsite</string>
    <string name="offsite">Offsite</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="current_password"> Enter Current Password</string>
    <string name="con_password">Confirm New Password</string>
    <string name="new_password1">Enter New Password</string>
    <string name="logout">Logout</string>
    <!--<string name="no_internet">Something went wrong please try again\nlater</string>-->
    <string name="no_internet">Please check your internet connection \n and try again</string>
    <string name="cue_location">"Progressive Communications" Would Like To Use Your Current Location</string>


</resources>
