<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <com.progressivecommunications.views.TextViewAgencyregular
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password1"
        android:textColor="@color/background"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="@dimen/_25sdp"
        android:background="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <com.progressivecommunications.views.EditTextebrima
        android:id="@+id/forgot_email_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:padding="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/cur_pwd"
        android:textColorHint="@color/cur_pwd"
        android:background="@drawable/edit_text_background">

        <requestFocus />

    </com.progressivecommunications.views.EditTextebrima>

    <TextView
        android:layout_below="@id/forgot_email_et"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_height="@dimen/_1sdp"
        android:background="#32e1e1e1"
        android:visibility="visible"/>

    <com.progressivecommunications.views.Buttonebrima
        android:id="@+id/done_btn"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:background="@drawable/submit_btn"
        android:text="@string/submit"
        android:textSize="@dimen/_18sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_25sdp"

         />


</LinearLayout>