<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.progressivecommunications.activity.Dashboard">

    <RelativeLayout
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/background">

        <com.progressivecommunications.views.TextViewAgencyregular
            android:id="@+id/settings_header_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/settings_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:src="@drawable/back_icon"
            android:layout_alignTop="@+id/settings_header_title_txt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <com.progressivecommunications.views.TextViewebrima
            android:id="@+id/change_password"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/chnage_pwd"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/change_password_down"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:background="@drawable/downarrow"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/change_password_up"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:background="@drawable/uparrow"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#d2d1d1"
        android:id="@+id/background_line"
        android:visibility="visible"/>



        <com.progressivecommunications.views.EditTextebrima
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:hint="@string/current_password"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/edit_text_background"
            android:textSize="@dimen/_12sdp"
            android:maxLength="20"
            android:textColor="@color/cur_pwd"
            android:inputType="textPassword"
            android:visibility="gone"/>
    <TextView
        android:id="@+id/background_line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#d2d1d1"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:visibility="gone"/>

    <com.progressivecommunications.views.EditTextebrima
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:textSize="@dimen/_12sdp"
        android:maxLength="20"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/cur_pwd"
        android:background="@drawable/edit_text_background"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/background_line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#d2d1d1"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:visibility="gone"/>

    <com.progressivecommunications.views.EditTextebrima
        android:id="@+id/con_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:hint="@string/con_password"
        android:textColor="@color/cur_pwd"
        android:background="@drawable/edit_text_background"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:maxLength="20"
        android:imeOptions="actionDone"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:inputType="textPassword"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/background_line3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#d2d1d1"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/set_submit_btn"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/submit_btn"
        android:text="@string/submit"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/background_line4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="#d2d1d1"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.progressivecommunications.views.TextViewebrima
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:gravity="center_vertical"
            android:textColor="@color/chnage_pwd"
            android:text="@string/logout"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#d2d1d1"/>



</LinearLayout>
