<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.progressivecommunications.activity.SetNewPassword">

<RelativeLayout
    android:id="@+id/set_new_password_title_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:layout_marginTop="@dimen/_130sdp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

<RelativeLayout
    android:id="@+id/set_new_password_header"
    android:layout_below="@+id/set_new_password_title_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    android:background="@color/background">

    <com.progressivecommunications.views.TextViewAgencyregular
        android:id="@+id/set_new_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:text="@string/set_new_password"/>

    <com.progressivecommunications.views.EditTextebrima
        android:layout_below="@+id/set_new_password_title"
        android:layout_marginTop="@dimen/_30sdp"
        android:id="@+id/new_password_et"
        android:hint="@string/new_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword"
        android:textSize="@dimen/_14sdp"/>

    <TextView
        android:layout_below="@id/new_password_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#32e1e1e1"
        android:id="@+id/background_line"
        android:layout_marginTop="@dimen/_2sdp"
        android:visibility="visible"/>

    <com.progressivecommunications.views.EditTextebrima
        android:layout_below="@+id/new_password_et"
        android:id="@+id/confirm_password_et"
        android:hint="@string/confirm_password"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColorHint="@color/white"
        android:background="@drawable/edit_text_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="@dimen/_14sdp"
        android:maxLength="20"
        android:textColor="@color/white"
        android:imeOptions="actionDone"
        android:layout_alignLeft="@+id/new_password_et"
        android:layout_alignStart="@+id/new_password_et"
        android:layout_alignRight="@+id/new_password_et"
        android:layout_alignEnd="@+id/new_password_et" />

    <TextView
        android:layout_below="@id/confirm_password_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#32e1e1e1"
        android:layout_marginTop="@dimen/_2sdp"
        android:visibility="visible"/>


    <Button
        android:id="@+id/pwd_submit_btn"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/submit_btn"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/white"
        android:layout_below="@+id/confirm_password_et"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

</RelativeLayout>
