<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.progressivecommunications.activity.Dashboard">

    <RelativeLayout
        android:id="@+id/dashboard_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/background">

        <com.progressivecommunications.views.TextViewAgencyregular
            android:id="@+id/dashboard_header_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="@dimen/_10sdp"
            android:src="@drawable/setting_icon"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/onsite_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/submit_btn"
                android:text="@string/onsite"
                android:textSize="@dimen/_15sdp"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_10sdp"
                />

            <Button
                android:id="@+id/offsite_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/submit_btn"
                android:text="@string/offsite"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:visibility="visible"/>

            <LinearLayout
            android:id="@+id/time_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

            <com.progressivecommunications.views.TextViewebrima
                android:id="@+id/time"
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:layout_gravity="center"
                android:text="11:06 AM"/>

            <com.progressivecommunications.views.TextViewebrima
                android:id="@+id/time_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/_15sdp"
                android:text=" (a moment ago)"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
